--- a/android-developer.html
+++ b/android-developer.html
@@ -49,6 +49,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698532718-android-sr-engineer-mobile-developer-experience'>Square Android Sr. Engineer, Mobile Developer Experience | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/hiring/0207f1c9-5257-49f5-b74a-11ac84b038ec'>  - Android Developer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -57,7 +61,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698473117-android-developer'>Devoteam Android developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698473117-android-developer'>Devoteam Android developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -65,7 +69,7 @@
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rakutenrewards/jobs/4498994002'>Job Application for Senior Android Developer  at Rakuten Rewards (formerly Ebates)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rakutenrewards/jobs/4498994002'>Job Application for Senior Android Developer  at Rakuten Rewards (formerly Ebates)</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -150,7 +154,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">Vietnam Vietnam  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
+<h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
       Android Developer - Supermercato24
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -288,7 +292,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Canada London</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ParkhyaSolutionsPvtLtd/743999697701217-android-developer'>Parkhya Solutions Pvt Ltd Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ParkhyaSolutionsPvtLtd/743999697701217-android-developer'>Parkhya Solutions Pvt Ltd Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -322,7 +326,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://zattoo.join.com/jobs/434902-android-developer'>Job @ Zattoo (Berlin): Android Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zattoo.join.com/jobs/434902-android-developer'>Job @ Zattoo (Berlin): Android Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -385,7 +389,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Krak?w Lesser Poland Voivodeship, Poland  Canada</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://temperednetworks.applytojob.com/apply/w3KksgoQnL/Sr-Android-Developer-Contract-To-Hire'>Sr. Android Developer (Contract to hire) - Tempered Networks - Career Page</a></h5> 
+<h5><a href='http://temperednetworks.applytojob.com/apply/w3KksgoQnL/Sr-Android-Developer-Contract-To-Hire'>Sr. Android Developer (Contract to hire) - Tempered Networks - Career Page</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -486,10 +490,6 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
-<hr/>
-<h5><a href='https://www.jobsaddaa.com/jobs/hiring-android-developers-for-hyderabad-location/'>Hiring Android Developers for Hyderabad Location | JobsAddaa.com</a></h5> 
-<p><span class="badge badge-light">Hyderabad Hyderabad Hyderabad</span></p>
-<p>Posted on:: 2019-10-09</p>
 <hr/>
 
 
